# mdbook_summary_script

./: pyproject.toml
src/: main.py
